# groove

./: .gitignore  README.md  pyproject.toml
config/: beets.yaml  groove.toml.example
launchd/: com.groove.charts.plist  com.groove.metadata.plist  com.groove.newreleases.plist  com.groove.server.plist
src/groove/: __init__.py  autoqueue.py  bulk_parser.py  cli.py  config.py  doctor.py  downloader.py  importer.py  init_hdd.py  metadata_retagger.py  ssl_support.py  store.py  worker.py
src/groove/discovery/: __init__.py  billboard.py  genre.py  lastfm.py  new_releases.py  uk_top40.py
src/groove/web/: __init__.py  app.py  routes.py
src/groove/web/templates/: base.html  bulk.html  discography.html  discoveries.html  help.html  index.html  library.html  review.html  watchlist.html
src/groove/web/templates/partials/: edit_form.html  queue_table.html
tests/: test_bulk_parser.py  test_metadata_retagger.py  test_store.py
