[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "groove"
version = "0.1.0"
description = "Self-hosted music library: download, tag, file, and discover music."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2024.0.0",
    "beets>=2.1.0",
    "pyacoustid>=1.3.0",
    "yt-dlp>=2024.1.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.4",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "musicbrainzngs>=0.7.1",
    "pylast>=5.3.0",
    "filelock>=3.14.0",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.9",
    "rich>=13.7.1",
    "typer>=0.12.3",
    "tomli>=2.0.1 ; python_version < '3.11'",
    "spotdl>=3.9.6",
    "ytmusicapi>=1.10.0",
    "mutagen>=1.47.0",
    "pillow>=10.0.0",
]

[project.scripts]
groove = "groove.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/groove"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "httpx>=0.27.0",
    "ruff>=0.4.5",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
